--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -26,7 +26,7 @@
         <li><a routerLink="/stories" (click)="closeAll()">Success Stories 🌟</a></li>
         <li><a routerLink="/achievements" (click)="closeAll()">Achievements 🏆</a></li>
         <li><a routerLink="/gallery" (click)="closeAll()">Memories / Gallery 📸</a></li>
-        <li><a routerLink="/events" (click)="closeAll()">Events & Reunions 🎉</a></li>
+        <li><a routerLink="/events" (click)="closeAll()">Events & Programmes 🎉</a></li>
         <li><a routerLink="/donate" (click)="closeAll()">Donate / Support ❤️</a></li>
       </ul>
     </li>
